--- a/index.html
+++ b/index.html
@@ -14,11 +14,44 @@
   <body>
    <div class="container-fluid">
      <!-- Just an image -->
-      <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-          <img src="/docs/4.6/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+      <nav class="navbar">
+        <a class="navbar-brand mx-auto" href="#">
+          <img src="https://raw.githubusercontent.com/superstuckattack/owlenglishkhm/main/assest/img/logo.png" width="100" height="100" alt="">
         </a>
       </nav>
+   </div>
+   <br>
+   <div class="container text-center">
+     <h4 class="h4test">Owl Academy - саме та школа англійської, яка скоро відкриє свої двері для тебе</h4>
+   </div>
+   <br>
+   <div class="container studying">
+    <div class="row">
+     <div class="col-md">
+       <div class="whostudying_text">
+         <p>Кого ми навчаємо?</p>
+       </div>
+     </div>
+     <div class="col-md">
+      <div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Дітки від 4 рочків</li>
+          <li class="list-group-item">Майбутніх першокласників</li>
+          <li class="list-group-item">Школярів</li>
+        </ul>
+      </div>
+     </div>
+    </div>
+   </div>
+
+   <div class="container">
+      <div class="jumbotron">
+        <h3 class="h3test">Бажаєте спробувати ?</h3>
+        <p class="lead">Бажаєте спробувати але не знаєте чи заняття підходять?</p>
+        <hr class="my-4">
+        <p>У Вас є дуже гарна можливість відвідати перше заняття безкоштовно.</p>
+        <a class="btn btn-primary btn-lg" href="tel:+380678895698" role="button">Зв'яжіться з нами</a>
+      </div>
    </div>
 
     </div>
