--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="lead">Бажаєте спробувати але не знаєте чи заняття підходять?</p>
         <hr class="my-4">
         <p>У Вас є дуже гарна можливість відвідати перше заняття безкоштовно.</p>
-        <a class="btn btn-primary btn-lg" href="tel:+380678895698" role="button">Зв'яжіться з нами</a>
+        <a class="btn btn-primary btn-lg" href="callto:+380678895698" role="button">Зв'яжіться з нами</a>
       </div>
    </div>
 
