--- a/index.html
+++ b/index.html
@@ -29,20 +29,61 @@
     <div class="row">
      <div class="col-md">
        <div class="whostudying_text">
-         <p>Кого ми навчаємо?</p>
+         <p>Для кого наше навчання?</p>
        </div>
      </div>
      <div class="col-md">
       <div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Дітки від 4 рочків</li>
-          <li class="list-group-item">Майбутніх першокласників</li>
-          <li class="list-group-item">Школярів</li>
-        </ul>
+        <!-- <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <span class="list-group-item-action">
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="mb-1"><b>Baby-English</b></h5>
+            </div>
+            <p class="mb-1">Розвиваючі заняття для діток від 4 років</p>
+          </li>
+          <li class="list-group-item">
+            <span class="list-group-item-action">
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="mb-1"><b>Літній інтенсив</b></h5>
+            </div>
+            <p class="mb-1">Підготовка до 1-го класу з англійської мови</p>
+          </li>
+          <li class="list-group-item">
+            <span class="list-group-item-action">
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="mb-1"><b>Англійська мова для учнів 1-4 класів</b></h5>
+            </div>
+            <p class="mb-1">Навчання за Оксфордськими підручниками, адаптованими до шкільної програми.</p>
+          </li>
+        </ul>-->
+
+        <div class="list-group">
+          <a href="#group1" class="list-group-item list-group-item-action">
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="mb-1"><b>Baby-English</b></h5>
+            </div>
+            <p class="mb-1">Розвиваючі заняття для діток від 4 років</p>
+          </a>
+          <a href="#group2" class="list-group-item list-group-item-action">
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="mb-1"><b>Літній інтенсив</b></h5>
+            </div>
+            <p class="mb-1">Підготовка до 1-го класу з англійської мови</p>
+          </a>
+          <a href="#group3" class="list-group-item list-group-item-action">
+            <div class="d-flex w-100 justify-content-between">
+              <h5 class="mb-1"><b>Англійська мова для учнів 1-4 класів</b></h5>
+            </div>
+            <p class="mb-1">Навчання за Оксфордськими підручниками, адаптованими до шкільної програми.</p>
+          </a>
+        </div>
       </div>
      </div>
     </div>
-   </div>
+   </div> 
+
+   <br>
 
    <div class="container">
       <div class="jumbotron">
@@ -52,6 +93,45 @@
         <p>У Вас є дуже гарна можливість відвідати перше заняття безкоштовно.</p>
         <a class="btn btn-primary btn-lg" href="https://www.instagram.com/direct/t/17845954272208438" role="button">Зв'яжіться з нами</a>
       </div>
+   </div>
+
+   <div class="container ct34">
+     <h3>Детально про курси</h3>
+     <br>
+     <div id="group1" class="group1">
+       <h4>Baby-English</h4>
+       <ul class="list-group list-group-flush">
+        <li class="list-group-item">Досвідчені викладачі</li>
+        <li class="list-group-item">Розвиваючі заняття</li>
+        <li class="list-group-item">Ігрова форма подачі матеріалу</li>
+        <li class="list-group-item">Цікава англійська</li>
+        <li class="list-group-item">Поринаємо в англомовне середовище з малечку</li>
+        <li class="list-group-item">Тривалість: 40хв</li>
+      </ul>
+     </div>
+     <br>
+     <div id="group2" class="group2">
+       <h4>Літній інтенсив</h4>
+       <ul class="list-group list-group-flush">
+        <li class="list-group-item">Досвідчені викладачі</li>
+        <li class="list-group-item">Інтерактивні заняття</li>
+        <li class="list-group-item">Ваш малюк буде впевнено йти до школи, маючи базові знання.</li>
+        <li class="list-group-item">Всі матеріали надаються</li>
+        <li class="list-group-item">Тривалість: 60хв</li>
+      </ul>
+     </div>
+      <br>
+     <div id="group3" class="group3">
+       <h4>Англійська мова для учнів 1-4 класів</h4>
+       <ul class="list-group list-group-flush">
+        <li class="list-group-item">Досвідчені викладачі</li>
+        <li class="list-group-item">Інтерактивні заняття</li>
+        <li class="list-group-item">Заняття за Оксфордськими виданнями, адаптованими до шкільної програми.</li>
+        <li class="list-group-item">Заняття включають всі напрямки: розмову, слухання, читання та граматику.</li>
+        <li class="list-group-item">По закінченню курсу дітки отримують сертифікат</li>
+        <li class="list-group-item">Тривалість: 60хв</li>
+      </ul>
+     </div>
    </div>
 
     </div>
