--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
    </div>
 
-   <div class="container ct34">
+   <div class="container">
      <h3>Детально про курси</h3>
      <br>
      <div id="group1" class="group1">
