--- a/index.html
+++ b/index.html
@@ -134,6 +134,14 @@
      </div>
    </div>
 
+
+   <div class="container footer text-center">
+     <span>Для більш детальної інформації звертайтесь</span><br>
+     <p>+38(067) 000 00 00</p>
+     або <br>
+    <a class="btn btn-success btn-lg" href="https://www.instagram.com/direct/t/17845954272208438" role="button">Напишіть нам</a>
+   </div>
+
     </div>
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
