--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <link rel="stylesheet" href="./assest/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assest/css/main.css">
 
-    <title>Owl English</title>
+    <title>Owl English Academy</title>
   </head>
   <body>
    <div class="container-fluid">
      <!-- Just an image -->
       <nav class="navbar">
-        <a class="navbar-brand mx-auto" href="#">
+        <a class="navbar-brand mx-auto" href="/">
           <img src="https://raw.githubusercontent.com/superstuckattack/owlenglishkhm/main/assest/img/logo.png" width="100" height="100" alt="">
         </a>
       </nav>
    </div>
    <br>
    <div class="container text-center">
-     <h4 class="h4test">Owl Academy - саме та школа англійської, яка скоро відкриє свої двері для тебе</h4>
+     <h4 class="h4test">Owl Academy - саме та школа англійської, яка відкриє світ інтерактивного навчання для вашої дитини.</h4>
    </div>
    <br>
    <div class="container studying">
@@ -91,7 +91,7 @@
         <p class="lead">Бажаєте спробувати але не знаєте чи заняття підходять?</p>
         <hr class="my-4">
         <p>У Вас є дуже гарна можливість відвідати перше заняття безкоштовно.</p>
-        <a class="btn btn-primary btn-lg" href="https://www.instagram.com/direct/t/17845954272208438" role="button">Зв'яжіться з нами</a>
+        <a class="btn btn-primary btn-lg" href="https://www.instagram.com/owl.english_khm/" role="button">Зв'яжіться з нами</a>
       </div>
    </div>
 
@@ -137,9 +137,9 @@
 
    <div class="container footer text-center">
      <span>Для більш детальної інформації звертайтесь</span><br>
-     <p>+38(067) 000 00 00</p>
+     <p>+38(096) 709 45 48</p>
      або <br>
-    <a class="btn btn-success btn-lg" href="https://www.instagram.com/direct/t/17845954272208438" role="button">Напишіть нам</a>
+    <a class="btn btn-success btn-lg" href="https://www.instagram.com/owl.english_khm/" role="button">Напишіть нам</a>
    </div>
 
     </div>
