--- a/index.html
+++ b/index.html
@@ -138,8 +138,11 @@
    <div class="container footer text-center">
      <span>Для більш детальної інформації звертайтесь</span><br>
      <p>+38(096) 709 45 48</p>
+     <span>або</span>
+     <p>+38(063) 116 11 28</p>
      або <br>
     <a class="btn btn-success btn-lg" href="https://www.instagram.com/owl.english_khm/" role="button">Напишіть нам</a>
+    <p>Наша адреса: м.Хмельницький, м-рн Озерна, вул. Січових стрільців 4а</p>
    </div>
 
     </div>
