--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    </div>
    <br>
    <div class="container text-center">
-     <h4 class="h4test">Owl Academy - саме та школа англійської, яка відкриє світ інтерактивного навчання для вашої дитини.</h4>
+     <h4 class="h4test">Коротко про нас.</h4>
    </div>
    <br>
    <div class="container studying">
