--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
      <span>або</span>
      <p>+38(063) 116 11 28</p>
      або <br>
-    <a class="btn btn-success btn-lg" href="https://www.instagram.com/owl.english_khm/" role="button">Напишіть нам</a>
+    <a class="btn btn-success btn-lg" href="https://www.instagram.com/owl.english_khm/" role="button">Напишіть нам</a><br>
     <p>Наша адреса: м.Хмельницький, м-рн Озерна, вул. Січових стрільців 4а</p>
    </div>
 
