--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </nav>
    </div>
    <br>
-   <div class="container text-center">
+  <!-- <div class="container text-center">
      <h4 class="h4test">Коротко про нас.</h4>
-   </div>
+   </div>-->
    <br>
    <div class="container studying">
     <div class="row">
