changed lang map
2

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
      або <br>
     <a class="btn btn-success btn-lg" href="https://www.instagram.com/owl.english_khm/" role="button">Напишіть нам</a><br>
    <br> <p>Наша адреса: м.Хмельницький, м-рн Озерна, вул. Січових стрільців 4а</p><br>
-   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d648.4532126834409!2d27.013732048183524!3d49.45025409849716!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473207003f4f5d45%3A0x46117d2684d34414!2sOwl%20English!5e0!3m2!1sru!2sua!4v1719312441935!5m2!1sru!2sua" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d648.4494969148775!2d27.0135777!3d49.450535!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473207003f4f5d45%3A0x46117d2684d34414!2sOwl%20English!5e0!3m2!1suk!2sua!4v1719384231849!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
    </div>
 
     </div>
