--- a/index.html
+++ b/index.html
@@ -95,44 +95,116 @@
       </div>
    </div>
 
-   <div class="container">
-     <h3>Детально про курси</h3>
-     <br>
-     <div id="group1" class="group1">
-       <h4>Baby-English</h4>
-       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Досвідчені викладачі</li>
-        <li class="list-group-item">Розвиваючі заняття</li>
-        <li class="list-group-item">Ігрова форма подачі матеріалу</li>
-        <li class="list-group-item">Цікава англійська</li>
-        <li class="list-group-item">Поринаємо в англомовне середовище з малечку</li>
-        <li class="list-group-item">Тривалість: 40хв</li>
+   <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active" id="home-tab" data-toggle="tab" data-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">ПРО НАС</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="profile-tab" data-toggle="tab" data-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">ГРАФІК</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="contact-tab" data-toggle="tab" data-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">ПРАВИЛА ОПЛАТИ</button>
+    </li>
+  </ul>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+      <div class="container">
+        <h3>Детально про курси</h3>
+        <br>
+        <div id="group1" class="group1">
+          <h4>Baby-English</h4>
+          <ul class="list-group list-group-flush">
+           <li class="list-group-item">Досвідчені викладачі</li>
+           <li class="list-group-item">Розвиваючі заняття</li>
+           <li class="list-group-item">Ігрова форма подачі матеріалу</li>
+           <li class="list-group-item">Цікава англійська</li>
+           <li class="list-group-item">Поринаємо в англомовне середовище з малечку</li>
+           <li class="list-group-item">Тривалість: 40хв</li>
+         </ul>
+        </div>
+        <br>
+        <div id="group2" class="group2">
+          <h4>Літній інтенсив</h4>
+          <ul class="list-group list-group-flush">
+           <li class="list-group-item">Досвідчені викладачі</li>
+           <li class="list-group-item">Інтерактивні заняття</li>
+           <li class="list-group-item">Ваш малюк буде впевнено йти до школи, маючи базові знання.</li>
+           <li class="list-group-item">Всі матеріали надаються</li>
+           <li class="list-group-item">Тривалість: 60хв</li>
+         </ul>
+        </div>
+         <br>
+        <div id="group3" class="group3">
+          <h4>Англійська мова для учнів 1-4 класів</h4>
+          <ul class="list-group list-group-flush">
+           <li class="list-group-item">Досвідчені викладачі</li>
+           <li class="list-group-item">Інтерактивні заняття</li>
+           <li class="list-group-item">Заняття за Оксфордськими виданнями, адаптованими до шкільної програми.</li>
+           <li class="list-group-item">Заняття включають всі напрямки: розмову, слухання, читання та граматику.</li>
+           <li class="list-group-item">По закінченню курсу дітки отримують сертифікат</li>
+           <li class="list-group-item">Тривалість: 60хв</li>
+         </ul>
+        </div>
+      </div>
+    </div>
+    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+      <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">Дошкільнята 4-5 р.</li>
+        <li class="list-group-item">Понеділок, П’ятниця</li>
+        <li class="list-group-item">18:30</li>
       </ul>
-     </div>
-     <br>
-     <div id="group2" class="group2">
-       <h4>Літній інтенсив</h4>
-       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Досвідчені викладачі</li>
-        <li class="list-group-item">Інтерактивні заняття</li>
-        <li class="list-group-item">Ваш малюк буде впевнено йти до школи, маючи базові знання.</li>
-        <li class="list-group-item">Всі матеріали надаються</li>
-        <li class="list-group-item">Тривалість: 60хв</li>
+      <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">Дошкільнята 4-5 р.</li>
+        <li class="list-group-item">Вівторок, Четвер</li>
+        <li class="list-group-item">17:30</li>
       </ul>
-     </div>
-      <br>
-     <div id="group3" class="group3">
-       <h4>Англійська мова для учнів 1-4 класів</h4>
-       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Досвідчені викладачі</li>
-        <li class="list-group-item">Інтерактивні заняття</li>
-        <li class="list-group-item">Заняття за Оксфордськими виданнями, адаптованими до шкільної програми.</li>
-        <li class="list-group-item">Заняття включають всі напрямки: розмову, слухання, читання та граматику.</li>
-        <li class="list-group-item">По закінченню курсу дітки отримують сертифікат</li>
-        <li class="list-group-item">Тривалість: 60хв</li>
+      <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">Дошкільнята 5-6 р.</li>
+        <li class="list-group-item">Понеділок, Середа</li>
+        <li class="list-group-item">17:30</li>
       </ul>
-     </div>
-   </div>
+      <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">2 клас</li>
+        <li class="list-group-item">Понеділок, П’ятниця</li>
+        <li class="list-group-item">15:30</li>
+      </ul>
+      <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">2 клас</li>
+        <li class="list-group-item">Вівторок, Четвер</li>
+        <li class="list-group-item">19:15</li>
+      </ul>
+      <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">3 клас</li>
+        <li class="list-group-item">Понеділок, Середа</li>
+        <li class="list-group-item">16:30</li>
+      </ul>
+      <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">3 клас</li>
+        <li class="list-group-item">Вівторок, Четвер</li>
+        <li class="list-group-item">18:15</li>
+      </ul>
+      <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">4 клас</li>
+        <li class="list-group-item">Середа 18:30</li>
+        <li class="list-group-item">Пʼятниця 17:30</li>
+      </ul>
+      <ul class="list-group list-group-horizontal">
+        <li class="list-group-item">5 клас</li>
+        <li class="list-group-item">Понеділок, П’ятниця</li>
+        <li class="list-group-item">19:15</li>
+      </ul>
+    </div>
+    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">1. Абонемент оплачується до 10 числа поточного місяця і діє до кінця місяця </li>
+        <li class="list-group-item">2. Кошти за пропущені заняття не повертаються та заняття згорає</li>
+        <li class="list-group-item">3. Перерахунок (50% від абонементу) здійснюється у разі пропуску занять протягом 2 тижнів та більше (за наявності довідки про хворобу) </li>
+        <li class="list-group-item">4. Якщо заняття відмінено школою, то вартість разового заняття віднімається від наступного абонемента</li>
+      </ul>
+    </div>
+  </div>
+
+  
 
 
    <div class="container footer text-center">
