--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <p class="lead">Бажаєте спробувати але не знаєте чи заняття підходять?</p>
         <hr class="my-4">
         <p>У Вас є дуже гарна можливість відвідати перше заняття безкоштовно.</p>
-        <a class="btn btn-primary btn-lg text-center" href="https://www.instagram.com/owl.english_khm/" role="button">Зв'яжіться з нами</a>
+        <a class="btn btn-primary btn-lg" href="https://www.instagram.com/owl.english_khm/" role="button">Зв'яжіться з нами</a>
       </div>
    </div>
 
