--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <li class="list-group-item">Понеділок, П’ятниця</li>
         <li class="list-group-item">15:30</li>
       </ul>
-      <ul class="list-group list-group-horizontal-sm">
+      <ul class="list-group list-group-horizontal">
         <li class="list-group-item">2 клас</li>
         <li class="list-group-item">Вівторок, Четвер</li>
         <li class="list-group-item">19:15</li>
