--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
             </div>
             <p class="mb-1">Розвиваючі заняття для діток від 4 років</p>
           </a>
-          <a href="#group2" class="list-group-item list-group-item-action">
+          <!--<a href="#group2" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1"><b>Літній інтенсив</b></h5>
             </div>
             <p class="mb-1">Підготовка до 1-го класу з англійської мови</p>
-          </a>
+          </a>-->
           <a href="#group3" class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between">
               <h5 class="mb-1"><b>Англійська мова для учнів 1-4 класів</b></h5>
@@ -168,7 +168,7 @@
          </ul>
         </div>
         <br>
-        <div id="group2" class="group2">
+        <!--<div id="group2" class="group2">
           <h4>Літній інтенсив</h4>
           <ul class="list-group list-group-flush">
            <li class="list-group-item">Досвідчені викладачі</li>
@@ -177,7 +177,7 @@
            <li class="list-group-item">Всі матеріали надаються</li>
            <li class="list-group-item">Тривалість: 60хв</li>
          </ul>
-        </div>
+        </div>-->
          <br>
         <div id="group3" class="group3">
           <h4>Англійська мова для учнів 1-4 класів</h4>
