--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                 </div>
                 <p class="mb-1">Розвиваючі заняття для діток від 4 років</p>
               </a>
-              <a href="#group2" class="list-group-item list-group-item-action">
+              <!--<a href="#group2" class="list-group-item list-group-item-action">
                 <div class="d-flex w-100 justify-content-between">
                   <h5 class="mb-1"><b>Літній інтенсив</b></h5>
                 </div>
                 <p class="mb-1">Підготовка до 1-го класу з англійської мови</p>
-              </a>
+              </a>-->
               <a href="#group3" class="list-group-item list-group-item-action">
                 <div class="d-flex w-100 justify-content-between">
                   <h5 class="mb-1"><b>Англійська мова для учнів 1-4 класів</b></h5>
