--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                 </div>
                 <div class="col-lg-8">
                     <div class="map-container">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2596.3248243976387!2d27.017799776891713!3d49.40893917140033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473206f38e0c3d6d%3A0x7f39f2f3b96d4c8c!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiw!5e0!3m2!1suk!2sua!4v1699372149183!5m2!1suk!2sua" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d648.4494969148775!2d27.0135777!3d49.450535!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473207003f4f5d45%3A0x46117d2684d34414!2sOwl%20English!5e0!3m2!1suk!2sua!4v1719384231849!5m2!1suk!2sua" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
